--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MyNote" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.MyNote" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:background">@android:color/white</item>
+<!--        <androidx.media3.ui.PlayerView-->
+<!--            xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--            android:id="@+id/player_view"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="@android:color/white" />-->
+    </style>
 </resources>
